# wfl

./: pyproject.toml
.devcontainer/: devcontainer.json
whats_for_lunch/: Menu.py  config.yaml  main.py
